[fix] congestion data align to center

--- a/src/signup.css
+++ b/src/signup.css
@@ -42,3 +42,7 @@
 .display {
     margin: 1em;
 }
+
+.congestion-data.display {
+    text-align: center;
+}
